--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ jdk:
 - oraclejdk8
 before_install:
 - openssl aes-256-cbc -K $encrypted_b2e4bbb65921_key -iv $encrypted_b2e4bbb65921_iv
-  -in C:\\Users\\Marcos\\workspace\\big-ws\\src\\main\\resources\\application.properties.enc -out C:\\Users\\Marcos\\workspace\\big-ws\\src\\main\\resources\\application.properties
+  -in src\\main\\resources\\application.properties.enc -out src\\main\\resources\\application.properties
   -d
